--- a/firebase-upload-form/package.json
+++ b/firebase-upload-form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-firebase-app",
+  "name": "firebase-upload-form",
   "private": true,
   "version": "0.0.0",
   "type": "module",
